--- a/css-structure_taco-truck/index.html
+++ b/css-structure_taco-truck/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>The Taco Truck</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
@@ -128,5 +128,19 @@
         </li>
       </ul>
     </main>
+    <footer>
+      <div class="imprint">
+        <p>Pariser Platz, 10117 Berlin</p>
+        <p>0157-9724815</p>
+      </div>
+      <div class="social">
+        <figure>
+          <img src="./assets/Instagram Icon.png" alt="insta" />
+        </figure>
+        <figure>
+          <img src="./assets/Facebook Icon.png" alt="insta" />
+        </figure>
+      </div>
+    </footer>
   </body>
 </html>
