personal profile - done

--- a/HTML-forms/html-forms_personal-profile-form/index.html
+++ b/HTML-forms/html-forms_personal-profile-form/index.html
@@ -9,5 +9,36 @@
     <title>Personal Profile Form</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Create your Personal Profile</h1>
+    <form action="">
+      <p>We want ot get to know you! Please enter your personal information</p>
+      <fieldset>
+        <legend>Personal Information</legend>
+        <label for="first-name">First Name</label>
+        <input id="first-name" type="text" />
+        <label for="last-name">Last Name</label>
+        <input id="last-name" type="text" />
+        <label for="birthsay">Your Birthday</label>
+        <input id="birthsay" type="date" />
+      </fieldset>
+      <p>Can you tell us a bit more? We want to annoy you with unwanted adds</p>
+      <fieldset>
+
+        <legend>Further Information</legend>
+        <label for="favorite-color">favorite Color</label>
+        <input id="favorite-color" value="#ff0000" type="color" />
+        <label for="favorite-pet">What's yours favorite pet?</label>
+        <select name="favorite-pet" id="favorite-pet">
+          <option value="dog">Dog</option>
+          <option value="dog">cat</option>
+          <option value="dog">Marmot</option>
+        </select>
+      </option>
+    </fieldset>
+    <button type="input">
+Submit
+    </button>
+  </form>
+  </body>
 </html>
