--- a/HTML-forms/html-forms_finding-a11y-errors/index.html
+++ b/HTML-forms/html-forms_finding-a11y-errors/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1 class="title">Understanding A11y in Forms</h1>
+    <h1 class="title" aria-label="title">Understanding A11y in Forms</h1>
     <p id="description">
       Please let us know how we can support you with a11y issues.
     </p>
@@ -18,13 +18,18 @@
     <form for="title">
       <fieldset>
         <legend>Enter your information</legend>
-        <label>Name:</label>
+        <label for="name-Input">Name:</label>
         <input id="name-Input" type="text" />
-        <label>Age:</label>
+        <label for="age-Input">Age:</label>
         <input id="age-Input" type="text" />
-        <label>Color you cannot see:</label>
+        <label for="color-Input">Color you cannot see:</label>
         <input id="color-Input" type="color" />
-        <textarea rows="7" placeholder="Leave us a message..."></textarea>
+        <label for="message">Leave a message here:</label>
+        <textarea
+          id="message"
+          rows="7"
+          placeholder="Leave us a message..."
+        ></textarea>
         <button type="submit">Submit</button>
       </fieldset>
     </form>
