--- a/js-functions/js-functions_progress-bar/index.html
+++ b/js-functions/js-functions_progress-bar/index.html
@@ -29,7 +29,10 @@
             data-js="progress-bar"
          ></div>
       </nav>
-      <div class="image-container">
+      <div
+         class="image-container"
+         data-js="img-container"
+      >
          <img
             src="https://source.unsplash.com/featured/400x400"
             alt=""
